fix_arrows_visible

--- a/src/components/cards/Post/styles.module.scss
+++ b/src/components/cards/Post/styles.module.scss
@@ -99,10 +99,14 @@
 .images {
   height: 250px;
   text-align: center;
+  border-radius: 5px;
 }
 
 .image {
-  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: baseline;
 }
 
 .primaryText {
